Bug 1123553 - Fix -Wuninitialized warning in GonkDisplayJB.cpp by removing unnecessary error check. r=mwu